# enos-iot-sdk-c

./: CMakeLists.txt  clean_all_cmake_tmp.sh  readme.md
dst/test/enos_mqtt_test_tmp/: ca.crt  cert.crt  csr_pri_key.pem  csr_pub_key.pem  req.csr
include/: CMakeLists.txt
include/enos_c_api/: enos_c_api.h  enos_common.h  enos_encrypt_api.h  enos_mqtt_api.h  enos_restful_api.h
src/: CMakeLists.txt
src/enos_c_api/: CMakeLists.txt  common.c  common_tool.c  common_tool.h  encrypt.c  mqtt.c  restful.c
support/: CMakeLists.txt
support/linux_armv7l_moxa_32_local/lib/: libcharset.so.1.0.0  libcjson.so.1.7.7  libcjson_utils.so.1.7.7  libcrypto.so.1.1  libcurl.so.4.5.0  libiconv.so.2.6.0  libpaho-mqtt3a.so.1.3.0  libpaho-mqtt3as.so.1.3.0  libpaho-mqtt3c.so.1.3.0  libpaho-mqtt3cs.so.1.3.0  libssl.so.1.1
support/linux_mipsel_openwrt-small_32_cross/lib/: libcrypto.so.1.1  libcurl.so.4.5.0  libpaho-mqtt3cs.so.1.3.0  libssl.so.1.1
support/linux_mipsel_openwrt_32_cross/lib/: libcharset.so.1.0.0  libcjson.so.1.7.7  libcjson_utils.so.1.7.7  libcrypto.so.1.1  libcurl.so.4.5.0  libiconv.so.2.6.0  libpaho-mqtt3a.so.1.3.0  libpaho-mqtt3as.so.1.3.0  libpaho-mqtt3c.so.1.3.0  libpaho-mqtt3cs.so.1.3.0  libssl.so.1.1
support/linux_x86_centos6_32_local/: generate_soft_link.sh
support/linux_x86_centos6_32_local/lib/: libcharset.so.1.0.0  libcjson.so.1.7.7  libcjson_utils.so.1.7.7  libcrypto.so.1.1  libcurl.so.4.5.0  libiconv.so.2.6.0  libpaho-mqtt3a.so.1.3.0  libpaho-mqtt3as.so.1.3.0  libpaho-mqtt3c.so.1.3.0  libpaho-mqtt3cs.so.1.3.0  libssl.so.1.1
support/linux_x86_normal_64_local/: delete_soft_link.sh
support/linux_x86_normal_64_local/lib/: libcharset.so.1.0.0  libcjson.so.1.7.7  libcjson_utils.so.1.7.7  libcrypto.so.1.1  libcurl.so.4.5.0  libiconv.so.2.6.0  libpaho-mqtt3a.so.1.3.0  libpaho-mqtt3as.so.1.3.0  libpaho-mqtt3c.so.1.3.0  libpaho-mqtt3cs.so.1.3.0  libssl.so.1.1  libtss2-esys.so.0.0.0  libtss2-mu.so.0.0.0  libtss2-sys.so.0.0.0  libtss2-tcti-device.so.0.0.0  libtss2-tcti-mssim.so.0.0.0
support/win_x86_mingw_32_local/: CMakeLists.txt
support/win_x86_mingw_32_local/lib/: paho-mqtt3a.lib  paho-mqtt3as.lib  paho-mqtt3cs.lib
test/: CMakeLists.txt
test/eaa_file_encrypt/: CMakeLists.txt  eaa_file_encrypt.c  eaa_file_encrypt.h
test/enos_encrypt_test/: enos_encrypt_test.cpp  enos_encrypt_test.h
test/enos_mqtt_test/: enos_mqtt_test.cpp  enos_mqtt_test.h
test/enos_restful_test/: CMakeLists.txt  enos_restful_test.c
